gitops/generated/monitoring/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: monitoring
  namespace: monitoring

spec:
  selector:
    app: monitoring

  ports:
  - name: http
    port: 3000
    targetPort: 3000

  type: ClusterIP
