gitops/generated/monitoring/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring
  namespace: monitoring

spec:
  ingressClassName: traefik

  rules:
  - host: monitoring.shopnoltd.dpdns.org
    http:
      paths:
      - path: /
        pathType: Prefix

        backend:
          service:
            name: monitoring
            port:
              number: 3000
